--- a/gwidgs/invoice1/invoice.css
+++ b/gwidgs/invoice1/invoice.css
@@ -10,6 +10,10 @@ body {
   color: #4682b4;
 }
 
+.meta .title {
+  color: #000;
+}
+
 .header .title {
   font-size: 300%;
   font-weight: bold;
@@ -89,8 +93,9 @@ table.items td {
 }
 
 .name {
-  color: #000080;
-}
+  /* color: #000080; */
+  color: #4682b4;
+  }
 
 .address {
   padding-bottom: 1em;
